[package]
name = "sg3"
version = "0.1.5"
authors = ["Andy Grover <andy@pmtu.dev>"]
description = "A library for getting information from Linux SCSI Generic (sg3)"
documentation = "https://docs.rs/sg3/"
# homepage = "..."
repository = "https://github.com/agrover/sg3-rs"
readme = "README.md"
keywords = ["Linux", "SCSI", "storage"]
license = "MIT"
edition = "2018"

build = "build.rs"

[build-dependencies]
bindgen = "0"

[dependencies]
nix = "0"
byteorder = "1"
nom = "3.2"

